--- a/Section-2&Section-3/full-week.html
+++ b/Section-2&Section-3/full-week.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles/shared.css">
   <link rel="stylesheet" href="styles/full-week.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
