--- a/Section-11-Adv-javascript/index.html
+++ b/Section-11-Adv-javascript/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/app.js" defer></script>
-  <title>Advanced JavaScript</title>
-</head>
-<body>
-  <h1>Hi there!</h1>
-  <p>Hello world</p>
-  <p>This is a <a href="#" id="external-link" target="_blank">link</a></p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/app.js" defer></script>
+    <link rel="stylesheet" href="/styles.css" />
+    <title>Advanced JavaScript</title>
+  </head>
+  <body>
+    <div class="card">
+      <p>Product Name</p>
+      <input type="text" maxlength="60" />
+      <span id="number-style"><span id="counter">60</span></span>/60
+      <button type="submit">Submit</button>
+    </div>
+  </body>
 </html>
