resolved src path issue

--- a/Section-7-destination-project/index.html
+++ b/Section-7-destination-project/index.html
@@ -15,11 +15,11 @@
   <body>
     <header>
       <div id="page-logo">
-        <a href="/index.html">Travel Goals</a>
+        <a href="index.html">Travel Goals</a>
       </div>
       <nav>
         <ul>
-          <li><a href="/places.html">Destinatons</a></li>
+          <li><a href="places.html">Destinatons</a></li>
           <li><a href="">About</a></li>
         </ul>
       </nav>
@@ -29,24 +29,24 @@
         <div id="hero-content">
           <h1>Joe's Travel page</h1>
           <p>Let's explore the world together</p>
-          <a href="/places.html">Discover places</a>
+          <a href="places.html">Discover places</a>
         </div>
       </section>
       <section id="highlights">
         <h2>Highlights</h2>
         <ul id="destinations">
           <li class="destination">
-            <img src="/images/places/miami.jpg" alt="Miami streets on sunny day">
+            <img src="images/places/miami.jpg" alt="Miami streets on sunny day">
               <p>Mimai <strong>USA</strong></p>
             </img>
           </li>
           <li class="destination">
-            <img src="/images/places/munich.jpg" alt="Munich stadium in winter">
+            <img src="images/places/munich.jpg" alt="Munich stadium in winter">
             <p>Munich <strong>Germany</strong></p>
           </img>
           </li>
           <li class="destination">
-            <img src="/images/places/barcelona.jpg" alt="Palm beach in Barcelona">
+            <img src="images/places/barcelona.jpg" alt="Palm beach in Barcelona">
             <p>Barcelona <strong>Spain</strong></p>
           </img>
           </li>
@@ -57,12 +57,12 @@
       <ul>
         <li>
           <a href="https://www.instagram.com">
-            <img src="/images/icons/insta.png" alt="Instagram logo">
+            <img src="images/icons/insta.png" alt="Instagram logo">
           </a>
         </li>
         <li>
           <a href="https://www.facebook.com">
-            <img src="/images/icons/facebook.png" alt="facebook logo">
+            <img src="images/icons/facebook.png" alt="facebook logo">
           </a>
         </li>
       </ul>
