--- a/Section-7-destination-project/places.html
+++ b/Section-7-destination-project/places.html
@@ -14,11 +14,11 @@
   <body>
     <header>
       <div id="page-logo">
-        <a href="/index.html">Travel Goals</a>
+        <a href="index.html">Travel Goals</a>
       </div>
       <nav>
         <ul>
-          <li><a href="/places.html">Destinatons</a></li>
+          <li><a href="places.html">Destinatons</a></li>
           <li><a href="">About</a></li>
         </ul>
       </nav>
@@ -185,12 +185,12 @@
       <ul>
         <li>
           <a href="https://www.instagram.com">
-            <img src="/images/icons/insta.png" alt="Instagram logo" />
+            <img src="images/icons/insta.png" alt="Instagram logo" />
           </a>
         </li>
         <li>
           <a href="https://www.facebook.com">
-            <img src="/images/icons/facebook.png" alt="facebook logo" />
+            <img src="images/icons/facebook.png" alt="facebook logo" />
           </a>
         </li>
       </ul>
